# aws-lambda-api-event-utils

./: CHANGELOG.md  README.md  pyproject.toml
.github/actions/build-and-test/: action.yaml
.github/workflows/: pypi.yaml  test-pypi.yaml
aws_lambda_api_event_utils/: __init__.py  aws_lambda_api_event_utils.py  aws_lambda_api_event_validators.py
docs/: validators.md
tests/: conftest.py  events.py  test_body.py  test_content_type.py  test_cors.py  test_decorator.py  test_error_response.py  test_event_format_version.py  test_headers.py  test_json_serialization.py  test_make_response.py  test_method.py  test_path.py  test_query_parameters.py  test_utils.py
tests/stack/: .gitignore  copy_package.sh  template.yaml  test_stack.py
tests/stack/src/: handlers.py
